# vanguard-cpp

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/core/: Application.cpp  Application.h  Events.cpp  Events.h  Window.cpp  Window.h
